<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Motion</string>
    <string name="x">X軸加速度:</string>
    <string name="y">Y軸加速度:</string>
    <string name="z">Z軸加速度:</string>
    <string name="Acc">Acc:</string>
    <string name="Step">Step步數:</string>
    <string name="axisX">axisX:</string>
    <string name="axisY">axisY:</string>
    <string name="axisZ">axisZ:</string>
    <string name="Status">Status狀態:</string>
    <string name="rotationA">Rotation方位角:</string>
    <string name="rotationB">Rotation傾斜角:</string>
    <string name="rotationC">Rotation旋轉角:</string>
    
    <string name="_sdcard_accelerometerSensor_txt">/sdcard/accelerometerSensor.txt</string>
    <string name="_sdcard_gyroscpeSensor_txt">/sdcard/gyroscpeSensor.txt</string>
    <string name="ButtonStart">Start</string>
    <string name="ButtonStop">Stop</string>
    <string name="_sdcard_output1_txt">/sdcard/wave.txt</string>
    <string name="_sdcard_output2_txt">/sdcard/highpoint.txt</string>

</resources>